apps/keycloak/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
spec:
  # parentRefs: # set in overlay
  # hostnames: # set in overlay
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: keycloak-service
          port: 8080
          weight: 1
